--- a/materiales/static/css/footer.css
+++ b/materiales/static/css/footer.css
@@ -20,10 +20,7 @@ html, body {
 .main-footer {
     background-color: #f8f9fa;
     text-align: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
+    width: 100%;
     margin: 0;
     padding: 5px 0;
     box-sizing: border-box;
